WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148091
will-change: backface-visibility should not cause stacking context
https://bugs.webkit.org/show_bug.cgi?id=148091
Summary
will-change: backface-visibility should not cause stacking context
Simon Fraser (smfr)
Reported
2015-08-17 13:30:00 PDT
will-change: backface-visibility should not cause stacking context
Attachments
Patch
(7.79 KB, patch)
2015-08-17 13:31 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(6.76 KB, patch)
2015-08-17 17:16 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-08-17 13:31:52 PDT
Created
attachment 259177
[details]
Patch
alan
Comment 2
2015-08-17 13:46:07 PDT
Comment on
attachment 259177
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=259177&action=review
> Source/WebCore/rendering/RenderInline.h:182 > + return style().willChange() && style().willChange()->canCreateStackingContext() && shouldWillChangeCreateStackingContext();
return style().willChange() && style().willChange()->canCreateStackingContextOnInline();?
Simon Fraser (smfr)
Comment 3
2015-08-17 17:16:59 PDT
Created
attachment 259214
[details]
Patch
WebKit Commit Bot
Comment 4
2015-08-18 15:35:16 PDT
Comment on
attachment 259214
[details]
Patch Clearing flags on attachment: 259214 Committed
r188604
: <
http://trac.webkit.org/changeset/188604
>
WebKit Commit Bot
Comment 5
2015-08-18 15:35:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug