will-change: backface-visibility should not cause stacking context https://bugs.webkit.org/show_bug.cgi?id=148091

Reviewed by Zalan Bujtas.

Source/WebCore:

Take CSSPropertyWebkitBackfaceVisibility out of the list of properties that causes
will-change to create stacking context, since no value of the property creates
stacking.

Move willChangeCreatesStackingContext() and shouldWillChangeCreateStackingContext()
into RenderInline since it's only called from there.

* rendering/RenderElement.cpp:
(WebCore::RenderElement::shouldWillChangeCreateStackingContext): Deleted.
* rendering/RenderElement.h:
(WebCore::RenderElement::willChangeCreatesStackingContext): Deleted.
* rendering/RenderInline.h:
(WebCore::RenderInline::willChangeCreatesStackingContext):
* rendering/style/WillChangeData.cpp:
(WebCore::propertyCreatesStackingContext): Deleted.

LayoutTests:

Test that will-change: -webkit-backface-visibility does not create
stacking context.

* fast/css/will-change/resources/will-change-stacking-helper.js:


Canonical link: https://commits.webkit.org/166262@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188604 268f45cc-cd09-0410-ab3c-d52691b4dbfc