Source/WebCore/rendering/RenderElement.cpp
@@ -1476,16 +1476,6 @@ bool RenderElement::repaintForPausedImageAnimationsIfNeeded(const IntRect& visib
     return true;
 }
 
-bool RenderElement::shouldWillChangeCreateStackingContext() const
-{
-    ASSERT(style().willChange());
-    ASSERT(style().willChange()->canCreateStackingContext());
-
-    // On inlines, we only want to trigger RenderLayer creation
-    // if will-change contains a property that applies to inlines.
-    return is<RenderBox>(this) || (is<RenderInline>(this) && style().willChange()->canCreateStackingContextOnInline());
-}
-
 RenderNamedFlowThread* RenderElement::renderNamedFlowThreadWrapper()
 {
     auto* renderer = this;
